--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,12 +1,10 @@
-name: Build LaTeX
+name: Build LaTeX and publish PDF
 
 on:
   push:
     branches: [ "main" ]
     paths-ignore:
       - '**.md'
-      - '**.yml'
-      - '**.yaml'
   workflow_dispatch:
 
 jobs:
@@ -14,18 +12,21 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: danteev/texlive:latest
+
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
+
       - name: Build LaTeX
         run: |
           pdflatex cv
           biber    cv
           pdflatex cv
           pdflatex cv
-      - name: Copy to orphan branch
+
+      - name: Publish PDF as release asset
         if: success()
-        uses: dfm/force-push-branch-action@v1
+        uses: softprops/action-gh-release@v2
         with:
-          branch-suffix: "-cv"
-          path: cv.pdf
+          tag_name: latest
+          files: cv.pdf
